k8s-manifests/traefik/dashboard-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripprefix-dashboard
  namespace: traefik
spec:
  stripPrefix:
    prefixes:
      - /dashboard
      - /api
