k8s-manifests/traefik/dashboard-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: traefik
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/dashboard`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: stripprefix-dashboard
    - match: PathPrefix(`/api`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
